[gd_scene load_steps=24 format=3 uid="uid://bwjh7o0l7x7sg"]

[ext_resource type="Texture2D" uid="uid://d082oy8728trp" path="res://assets/Entities/Enemies/enemy_rpg.png" id="1_44yx8"]
[ext_resource type="Script" path="res://assets/Entities/Enemies/enemy_1.gd" id="1_rkre7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hje6s"]
radius = 8.0

[sub_resource type="Animation" id="Animation_t3dhh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_ht12l"]
resource_name = "dead_down"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [22]
}

[sub_resource type="Animation" id="Animation_llwlf"]
resource_name = "dead_left"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}

[sub_resource type="Animation" id="Animation_r8wps"]
resource_name = "dead_right"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [22]
}

[sub_resource type="Animation" id="Animation_l0ohq"]
resource_name = "dead_up"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}

[sub_resource type="Animation" id="Animation_iednb"]
resource_name = "move_down_left"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_b05p3"]
resource_name = "move_down_right"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_iu2mm"]
resource_name = "move_up_left"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_iy04u"]
resource_name = "move_up_right"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ytkdo"]
_data = {
"RESET": SubResource("Animation_t3dhh"),
"dead_down": SubResource("Animation_ht12l"),
"dead_left": SubResource("Animation_llwlf"),
"dead_right": SubResource("Animation_r8wps"),
"dead_up": SubResource("Animation_l0ohq"),
"move_down_left": SubResource("Animation_iednb"),
"move_down_right": SubResource("Animation_b05p3"),
"move_up_left": SubResource("Animation_iu2mm"),
"move_up_right": SubResource("Animation_iy04u")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_0f2g2"]
radius = 9.05539

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_dpkyi"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qq2b4"]
animation = &"move_up_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jdloy"]
animation = &"move_down_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_abgh5"]
animation = &"move_down_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p8cjo"]
animation = &"move_up_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_5b2si"]
blend_point_0/node = SubResource("AnimationNodeAnimation_qq2b4")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_jdloy")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_abgh5")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_p8cjo")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4sx1t"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_shpos"]
states/Dead/node = SubResource("AnimationNodeBlendSpace2D_dpkyi")
states/Dead/position = Vector2(684, 95)
states/Move/node = SubResource("AnimationNodeBlendSpace2D_5b2si")
states/Move/position = Vector2(444, 100)
transitions = ["Start", "Move", SubResource("AnimationNodeStateMachineTransition_4sx1t")]

[sub_resource type="CircleShape2D" id="CircleShape2D_p0msi"]
radius = 11.0

[node name="enemy_1" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 16
collision_mask = 3
script = ExtResource("1_rkre7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_44yx8")
hframes = 5
vframes = 5
frame = 1

[node name="enemy_colider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hje6s")
debug_color = Color(0.90465, 0.200751, 0.578376, 0.42)

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ytkdo")
}

[node name="hurtbox" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 17
collision_mask = 8

[node name="hurtbox_collider" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource("CircleShape2D_0f2g2")
debug_color = Color(0.29113, 0.515197, 0.947202, 0.42)

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
reset_on_save = false
tree_root = SubResource("AnimationNodeStateMachine_shpos")
anim_player = NodePath("../anim")
parameters/Dead/blend_position = Vector2(0, 0)
parameters/Move/blend_position = Vector2(0.296804, -0.00787401)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="hitbox" type="Area2D" parent="."]

[node name="hitbox_collider" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CircleShape2D_p0msi")
debug_color = Color(0.0137156, 0.631592, 0.456904, 0.42)

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
